--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Fob</string>
+    <string name="app_name">Avia Fob</string>
     <string name="BLE_Not_Available">Bluetooth adapter not available</string>
     <string name="BLE_Not_Enabled">Bluetooth not enabled</string>
     <string name="BLE_Adv_Not_Available">Bluetooth advertisments not available on this device</string>
@@ -15,8 +15,10 @@
     <string name="bt_null">Error: Bluetooth object null</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="start_pairing">Start</string>
+    <string name="start_pairing">Start Pairing</string>
     <string name="stop_pairing">Stop</string>
+    <string name="unlock_door">Unlock</string>
+    <string name="remove_pairing">Remove Pairing</string>
     <string name="bg_image">bgimage</string>
     <string name="icon_image">iconimage</string>
     <string name="Ble_Adv_Local_Name1">Avia_Keyfob</string>
